@@ -231,7 +231,7 @@
 +symbol_version (__floatdidf_internal, __floatdidf, GLIBC_2.0);
 +
 +
-+extern float floatdisf (int64_t);
++extern float __floatdisf (int64_t);
 +float __floatdisf_internal (int64_t u)
 +{
 +  return __floatdisf (u);
