@@ -84,7 +84,7 @@
 +symbol_version (__floatdidf_internal, __floatdidf, GLIBC_2.0);
 +
 +
-+extern float floatdisf (int64_t);
++extern float __floatdisf (int64_t);
 +float __floatdisf_internal (int64_t u)
 +{
 +  return __floatdisf (u);
@@ -418,11 +418,11 @@
 +typedef int int128_t __attribute__((__mode__(TI)));
 +
 +extern int128_t __multi3 (int128_t, int128_t);
-+int128_t INTUSE (__multi3) (int128_t x, int128_t y)
++int128_t __multi3_internal (int128_t x, int128_t y)
 +{
 +  return __multi3 (x, y);
 +}
-+symbol_version (INTUSE (__multi3), __multi3, GLIBC_2.0);
++symbol_version (__multi3_internal, __multi3, GLIBC_2.0);
 +
 +#endif
 --- a/sysdeps/alpha/Versions
@@ -860,87 +860,87 @@
 +typedef int int128_t __attribute__((__mode__(TI)));
 +
 +extern long double __divtf3 (long double, long double) attribute_hidden;
-+long double INTUSE (__divtf3) (long double x, long double y)
++long double __divtf3_internal (long double x, long double y)
 +{
 +  return __divtf3 (x, y);
 +}
-+symbol_version (INTUSE (__divtf3), __divtf3, GLIBC_2.2);
++symbol_version (__divtf3_internal, __divtf3, GLIBC_2.2);
 +
 +extern double __divdf3 (double, double) attribute_hidden;
-+double INTUSE (__divdf3) (double x, double y)
++double __divdf3_internal (double x, double y)
 +{
 +  return __divdf3 (x, y);
 +}
-+symbol_version (INTUSE (__divdf3), __divdf3, GLIBC_2.2);
++symbol_version (__divdf3_internal, __divdf3, GLIBC_2.2);
 +
 +extern float __divsf3 (float, float) attribute_hidden;
-+float INTUSE (__divsf3) (float x, float y)
++float __divsf3_internal (float x, float y)
 +{
 +  return __divsf3 (x, y);
 +}
-+symbol_version (INTUSE (__divsf3), __divsf3, GLIBC_2.2);
++symbol_version (__divsf3_internal, __divsf3, GLIBC_2.2);
 +
 +extern int64_t __divdi3 (int64_t, int64_t) attribute_hidden;
-+int64_t INTUSE (__divdi3) (int64_t x, int64_t y)
++int64_t __divdi3_internal (int64_t x, int64_t y)
 +{
 +  return __divdi3 (x, y);
 +}
-+symbol_version (INTUSE (__divdi3), __divdi3, GLIBC_2.2);
++symbol_version (__divdi3_internal, __divdi3, GLIBC_2.2);
 +
 +extern int64_t __moddi3 (int64_t, int64_t) attribute_hidden;
-+int64_t INTUSE (__moddi3) (int64_t x, int64_t y)
++int64_t __moddi3_internal (int64_t x, int64_t y)
 +{
 +  return __moddi3 (x, y);
 +}
-+symbol_version (INTUSE (__moddi3), __moddi3, GLIBC_2.2);
++symbol_version (__moddi3_internal, __moddi3, GLIBC_2.2);
 +
 +extern uint64_t __udivdi3 (uint64_t, uint64_t) attribute_hidden;
-+uint64_t INTUSE (__udivdi3) (uint64_t x, uint64_t y)
++uint64_t __udivdi3_internal (uint64_t x, uint64_t y)
 +{
 +  return __udivdi3 (x, y);
 +}
-+symbol_version (INTUSE (__udivdi3), __udivdi3, GLIBC_2.2);
++symbol_version (__udivdi3_internal, __udivdi3, GLIBC_2.2);
 +
 +extern uint64_t __umoddi3 (uint64_t, uint64_t) attribute_hidden;
-+uint64_t INTUSE (__umoddi3) (uint64_t x, uint64_t y)
++uint64_t __umoddi3_internal (uint64_t x, uint64_t y)
 +{
 +  return __umoddi3 (x, y);
 +}
-+symbol_version (INTUSE (__umoddi3), __umoddi3, GLIBC_2.2);
++symbol_version (__umoddi3_internal, __umoddi3, GLIBC_2.2);
 +
 +extern int128_t __multi3 (int128_t, int128_t) attribute_hidden;
-+int128_t INTUSE (__multi3) (int128_t x, int128_t y)
++int128_t __multi3_internal (int128_t x, int128_t y)
 +{
 +  return __multi3 (x, y);
 +}
-+symbol_version (INTUSE (__multi3), __multi3, GLIBC_2.2);
++symbol_version (__multi3_internal, __multi3, GLIBC_2.2);
 +
 +extern int64_t __divsi3 (int64_t, int64_t) attribute_hidden;
-+int64_t INTUSE (__divsi3) (int64_t x, int64_t y)
++int64_t __divsi3_internal (int64_t x, int64_t y)
 +{
 +  return __divsi3 (x, y);
 +}
-+symbol_version (INTUSE (__divsi3), __divsi3, GLIBC_2.2);
++symbol_version (__divsi3_internal, __divsi3, GLIBC_2.2);
 +
 +extern int64_t __modsi3 (int64_t, int64_t) attribute_hidden;
-+int64_t INTUSE (__modsi3) (int64_t x, int64_t y)
++int64_t __modsi3_internal (int64_t x, int64_t y)
 +{
 +  return __modsi3 (x, y);
 +}
-+symbol_version (INTUSE (__modsi3), __modsi3, GLIBC_2.2);
++symbol_version (__modsi3_internal, __modsi3, GLIBC_2.2);
 +
 +extern uint64_t __udivsi3 (uint64_t, uint64_t) attribute_hidden;
-+uint64_t INTUSE (__udivsi3) (uint64_t x, uint64_t y)
++uint64_t __udivsi3_internal (uint64_t x, uint64_t y)
 +{
 +  return __udivsi3 (x, y);
 +}
-+symbol_version (INTUSE (__udivsi3), __udivsi3, GLIBC_2.2);
++symbol_version (__udivsi3_internal, __udivsi3, GLIBC_2.2);
 +
 +extern uint64_t __umodsi3 (uint64_t, uint64_t) attribute_hidden;
-+uint64_t INTUSE (__umodsi3) (uint64_t x, uint64_t y)
++uint64_t __umodsi3_internal (uint64_t x, uint64_t y)
 +{
 +  return __umodsi3 (x, y);
 +}
-+symbol_version (INTUSE (__umodsi3), __umodsi3, GLIBC_2.2);
++symbol_version (__umodsi3_internal, __umodsi3, GLIBC_2.2);
 +
 +#endif
