@@ -52,6 +52,12 @@ glibc (2.21-0experimental1) UNRELEASED; urgency=medium
   * debian/patches/kfreebsd/local-no-pldd.diff: Drop, no longer used.
   * debian/patches/alpha/submitted-PTR_MANGLE.diff: Use IS_IN macros.
 
+  [ Aurelien Jarno ]
+  * debian/patches/any/local-libgcc-compat-main.diff: Fix definition of
+    __floatdisf for sparc.
+  * debian/patches/any/local-libgcc-compat-ports.diff: Fix definition of
+    __floatdisf for mips. Remove usage of INTUSE.
+
  -- Samuel Thibault <sthibault@debian.org>  Fri, 20 Mar 2015 12:30:54 +0000
 
 glibc (2.21-0experimental0) experimental; urgency=medium
